# fluent

./: .gitignore  MANIFEST.in  license  pyproject.toml  readme.md  requirements.txt  setup.py  test.py  todo.md
.github/workflows/: formatter.yml  pythonpublish.yml  unittest.yml
fluent/: __init__.py  essential.py  launch.py  version.py
fluent/core/: __init__.py  debug.py  font.py  launch.py  property.py  widget.py  window.py
fluent/debug/: __init__.py
fluent/material/: __init__.py  app_bar.py  button.py  scaffold.py
fluent/render/: __init__.py  align.py  color.py  font.py  property.py  window.py
fluent/render/font/: __init__.py  weight.py
fluent/tool/: __init__.py
fluent/widget/: __init__.py  color.py  core.py  screen.py  text.py
fluent/widget/layout/: __init__.py  align.py  center.py  overlay.py  padding.py  screen.py  spacer.py  stack.py
fluent/widget/shape/: __init__.py  box.py  circle.py  text.py
rocket/: __init__.py  display.py  launch.py
rocket/debug/: __init__.py  debug.py  reload.py
rocket/layout/: __init__.py  padding.py  stack.py
rocket/material/: __init__.py  alert.py  app.py  app_bar.py  button.py  page.py  scaffold.py
rocket/missile/: __init__.py  app_bar.py
rocket/pastel/: __init__.py  button.py  scaffold.py
rocket/render/: __init__.py  window.py
rocket/tool/: __init__.py
rocket/widget/: __init__.py  color.py  core.py  shapes.py
rocket/widget/core/: __init__.py  ellipse.py  rectangle.py  text.py
rocket/widget/layout/: __init__.py  align.py  center.py  overlay.py  padding.py  stack.py  (+1 more)
test/: __init__.py  size_test.py
(+12 files in other folders)
