[tool.poetry]
name = "libfluent"
version = "1.0.0-beta5"
description = "Fluent makes it easy and fast to build beautiful mobile apps"
authors = ["Ilya Breitburg <contact@breitburg.me>"]
license = "BSD 3-Clause \"New\" or \"Revised\" License"

[tool.poetry.dependencies]
python = "^3.7"
pysdl2 = "^0.9.7"
reloadr = "0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
